Updated history span to prevent overflow

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -460,6 +460,8 @@ li a {
 .history-span {
     width: 100%;
     display: inline-block;
+    overflow-x: hidden;
+    break-word: break-word;
 }
 
 .currentText {
